--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <h1>How the Internet Works</h1>
+    <h1>How the Internet REALLY Works</h1>
 
     <h2>1. Network of Networks</h2>
     <p>
