--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+    <main>
+        <h1>
+            <a href="https://kwoncena.github.io/corelabsystemsf24/">
+                <img src="ckclsslogo.png" alt="CARA KWON - CORE LAB: SYSTEMS - FALL 2024" class="logo">
+            </a>
+        </h1>
+    </main>
     <h1>How the Internet REALLY Works</h1>
 
     <h2>1. Network of Networks</h2>
